href no footer e box shadow

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       </div>
     </header>
 
+    <hr>
+    
     <section class="grid">
       <article class="grid-post" onclick="deuLike()">
         <img src="https://picsum.photos/250?random=1" alt="Post Picture" class="grid-image">
@@ -69,7 +71,7 @@
   </div>
 
   <footer>
-    <p>My Photo Grid desenvolvido por Rafael Marques | WoMakersCode Rj</p>
+    <p>My Photo Grid desenvolvido por <a href="https://rafaelmarqueiz.github.io/rafaelmarqueiz/">Rafael Marques</a> | WoMakersCode Rj</p>
   </footer>
   <script src="js/script.js"></script>
 </body>
