Função de curtir publicações

--- a/index.html
+++ b/index.html
@@ -19,53 +19,53 @@
     <hr>
     
     <section class="grid">
-      <article class="grid-post" onclick="deuLike()">
+      <article class="grid-post" id="grid-post1">
         <img src="https://picsum.photos/250?random=1" alt="Post Picture" class="grid-image">
-        <p class="grid-description">♡ lorem picsum</p>
+        <p class="grid-description"><span id="liked1">♡</span> lorem picsum</p>
       </article>
-      <article class="grid-post" onclick="deuLike()">
+      <article class="grid-post" id="grid-post2">
         <img src="https://picsum.photos/250?random=2" alt="Post Picture" class="grid-image">
-        <p class="grid-description">♡ lorem picsum</p>
+        <p class="grid-description"><span id="liked2">♡</span> lorem picsum</p>
       </article>
-      <article class="grid-post" onclick="deuLike()">
+      <article class="grid-post" id="grid-post3">
         <img src="https://picsum.photos/250?random=3" alt="Post Picture" class="grid-image">
-        <p class="grid-description">♡ lorem picsum</p>
+        <p class="grid-description"><span id="liked3">♡</span> lorem picsum</p>
       </article>
-      <article class="grid-post" onclick="deuLike()">
+      <article class="grid-post" id="grid-post4">
         <img src="https://picsum.photos/250?random=4" alt="Post Picture" class="grid-image">
-        <p class="grid-description">♡ lorem picsum</p>
+        <p class="grid-description"><span id="liked4">♡</span> lorem picsum</p>
       </article>
-      <article class="grid-post" onclick="deuLike()">
+      <article class="grid-post" id="grid-post5">
         <img src="https://picsum.photos/250?random=5" alt="Post Picture" class="grid-image">
-        <p class="grid-description">♡ lorem picsum</p>
+        <p class="grid-description"><span id="liked5">♡</span> lorem picsum</p>
       </article>
-      <article class="grid-post" onclick="deuLike()">
+      <article class="grid-post" id="grid-post6">
         <img src="https://picsum.photos/250?random=6" alt="Post Picture" class="grid-image">
-        <p class="grid-description">♡ lorem picsum</p>
+        <p class="grid-description"><span id="liked6">♡</span> lorem picsum</p>
       </article>
-      <article class="grid-post" onclick="deuLike()">
+      <article class="grid-post" id="grid-post7">
         <img src="https://picsum.photos/250?random=7" alt="Post Picture" class="grid-image">
-        <p class="grid-description">♡ lorem picsum</p>
+        <p class="grid-description"><span id="liked7">♡</span> lorem picsum</p>
       </article>
-      <article class="grid-post" onclick="deuLike()">
+      <article class="grid-post" id="grid-post8">
         <img src="https://picsum.photos/250?random=8" alt="Post Picture" class="grid-image">
-        <p class="grid-description">♡ lorem picsum</p>
+        <p class="grid-description"><span id="liked8">♡</span> lorem picsum</p>
       </article>
-      <article class="grid-post" onclick="deuLike()">
+      <article class="grid-post" id="grid-post9">
         <img src="https://picsum.photos/250?random=9" alt="Post Picture" class="grid-image">
-        <p class="grid-description">♡ lorem picsum</p>
+        <p class="grid-description"><span id="liked9">♡</span> lorem picsum</p>
       </article>
-      <article class="grid-post" onclick="deuLike()">
+      <article class="grid-post" id="grid-post10">
         <img src="https://picsum.photos/250?random=10" alt="Post Picture" class="grid-image">
-        <p class="grid-description">♡ lorem picsum</p>
+        <p class="grid-description"><span id="liked10">♡</span> lorem picsum</p>
       </article>
-      <article class="grid-post" onclick="deuLike()">
+      <article class="grid-post" id="grid-post11">
         <img src="https://picsum.photos/250?random=11" alt="Post Picture" class="grid-image">
-        <p class="grid-description">♡ lorem picsum</p>
+        <p class="grid-description"><span id="liked11">♡</span> lorem picsum</p>
       </article>
-      <article class="grid-post" onclick="deuLike()">
+      <article class="grid-post" id="grid-post12">
         <img src="https://picsum.photos/250?random=12" alt="Post Picture" class="grid-image">
-        <p class="grid-description">♡ lorem picsum</p>
+        <p class="grid-description"><span id="liked12">♡</span> lorem picsum</p>
       </article>
     </section>
   </div>
