change portifolio name

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
 
   <footer>
-    <p>My Photo Grid desenvolvido por <a href="https://rafaelmarqueiz.github.io/rafaelmarqueiz/">Rafael Marques</a> | WoMakersCode Rj</p>
+    <p>My Photo Grid desenvolvido por <a href="https://rafitamqs.github.io/rafitamqs/">Rafael Marques</a> | WoMakersCode Rj</p>
   </footer>
   <script src="js/script.js"></script>
 </body>
