change a profile picture link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="app">
     <header class="profile">
-      <img src="https://github.com/rafaelmarqueiz.png" width="250px" alt="Profile Picture" class="profile-image">
+      <img src="https://github.com/rafitamqs.png" width="250px" alt="Profile Picture" class="profile-image">
       <div class="profile-information">
         <h4 class="profile-name">Rafael Marques</h4>
         <p class="profile-description">I`m a frontend developer from Rio de Janeiro, Brazil</p>
