Mudança no footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="app">
     <header class="profile">
-      <img src="https://github.com/rafitamqs.png" width="250px" alt="Profile Picture" class="profile-image">
+      <img src="https://github.com/rafaelmarquesrm.png" width="250px" alt="Profile Picture" class="profile-image">
       <div class="profile-information">
         <h4 class="profile-name">Rafael Marques</h4>
         <p class="profile-description">I`m a frontend developer from Rio de Janeiro, Brazil</p>
@@ -71,7 +71,7 @@
   </div>
 
   <footer>
-    <p>My Photo Grid desenvolvido por <a href="https://rafitamqs.github.io/rafitamqs/">Rafael Marques</a> | WoMakersCode Rj</p>
+    <p>My Photo Grid desenvolvido por <a href="https://rafaelmarquesrm.github.io/rafaelmarquesrm/">Rafael Marques</a> | WoMakersCode Rj</p>
   </footer>
   <script src="js/script.js"></script>
 </body>
